# nerf-llm-scene-inspector

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  Makefile  README.md  pyproject.toml
configs/: backend_lerf.yaml  backend_opennerf.yaml  default.yaml
docs/: cold_email_paragraph.md  cv_bullets.md  engineering_pass_note.md  index.html  method_summary.md  portfolio_result_card.md  project_report.md  real_run_reproducibility.md  real_scene_capture_checklist.md  troubleshooting.md
examples/: annotations_example.json  experiment_matrix.yaml  prompt_sensitivity.yaml  queries_demo.yaml  relation_queries.yaml
scripts/: analyze_prompt_sensitivity.py  analyze_scene_relations.py  audit_claims.py  audit_query_evidence.py  audit_run.py  check_env.py  check_run_quality.py  compare_runs.py  create_annotation_template.py  create_annotation_workbench.py  create_capture_manifest.py  create_evidence_scorecard.py  create_real_run_plan.py  create_reproduction_bundle.py  create_run_readiness.py  create_run_result_card.py  create_submission_packet.py  diagnose_run_failures.py  evaluate_queries.py  export_portfolio_pack.py  finalize_annotations.py  generate_demo_assets.py  generate_portfolio_page.py  generate_project_site.py  generate_research_report.py  import_viewer_outputs.py  index_runs.py  inspect_scene_data.py  merge_annotation_workbench.py  preflight_real_run.py  prepare_data.py  query_scene.py  recommend_next_steps.py  repair_scene_query_from_viewer.py  review_annotations.py  run_dry_run_demo.py  run_experiment_matrix.py  run_scene_pipeline.py  setup_env.sh  (+5 more)
(+113 files in other folders)
