[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerf-llm-scene-inspector"
version = "0.1.0"
description = "Open-vocabulary 3D scene inspection pipeline built on Nerfstudio and LERF."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NeRF-LLM Scene Inspector"}]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
dashboard = ["streamlit>=1.30"]
video = ["imageio>=2.31", "imageio-ffmpeg>=0.4"]
nerf = ["nerfstudio>=0.3.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
